--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+h1{
+    margin-left: 20%;
+}
 #ideas {
     border: 1px solid black;
+    margin-left: 20%;
+    width: 30%;
+    text-align: center;
 }
